feat: implement archiving api WIP disabled security